src/objects/Apttus__AgreementLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_CMConfig__IsUsageTierModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the usage price tier is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the usage price tier is modifiable for the product or option</inlineHelpText>
        <label>Is Usage Tier Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ItemSequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sequence of items belonging to a line</description>
        <label>Item Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LineStatus__c</fullName>
        <description>The line status</description>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product/Service</fullName>
                    <default>true</default>
                    <label>Product/Service</label>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__NetAdjustmentPercent__c</fullName>
        <description>The net adjustment percent</description>
        <label>Net Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__NetUnitPrice__c</fullName>
        <description>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</description>
        <inlineHelpText>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OptionCost__c</fullName>
        <description>The rolled up extended cost of options for the product</description>
        <inlineHelpText>The rolled up extended cost of options for the product</inlineHelpText>
        <label>Option Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected option</description>
        <label>Option</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Option Line Items</relationshipLabel>
        <relationshipName>AgreementOptionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OptionPrice__c</fullName>
        <description>The rolled up adjusted price of options for the product</description>
        <label>Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OrderedQuantity__c</fullName>
        <description>The Total quantity for which sales orders have been created against the agreement line item when the order is accepted</description>
        <inlineHelpText>The Total quantity for which sales orders have been created against the agreement line item when the order is accepted</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ParentBundleNumber__c</fullName>
        <description>Represents the parent bundle number associated with the child bundle</description>
        <inlineHelpText>Represents the parent bundle number associated with the child bundle</inlineHelpText>
        <label>Parent Bundle Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the line item</description>
        <inlineHelpText>ID of the payment term associated with the line item</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceAdjustmentAmount__c</fullName>
        <description>The price adjustment amount</description>
        <label>Price Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceAdjustmentType__c</fullName>
        <label>Price Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceAdjustment__c</fullName>
        <description>The price adjustment is computed using aggregate price rules</description>
        <label>Price Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceGroup__c</fullName>
        <description>The price group associated with the product or option</description>
        <inlineHelpText>The price group associated with the product or option</inlineHelpText>
        <label>Price Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Ramp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceIncludedInBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option price is included in the bundle. Only applicable to Option line types.</description>
        <inlineHelpText>Indicates whether the option price is included in the bundle. Only applicable to Option line types.</inlineHelpText>
        <label>Price Included In Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the price list associated with the product or service</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list item</description>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceMethod__c</fullName>
        <description>The price method</description>
        <label>Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Related Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceType__c</fullName>
        <description>The price type</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceUom__c</fullName>
        <description>The pricing unit of measure for the product</description>
        <label>Pricing Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PricingDate__c</fullName>
        <description>The pricing date, The product list price is determined based on this date.</description>
        <inlineHelpText>The pricing date, The product list price is determined based on this date.</inlineHelpText>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PrimaryLineNumber__c</fullName>
        <description>Represents the unique number for each primary line item</description>
        <inlineHelpText>Represents the unique number for each primary line item</inlineHelpText>
        <label>Primary Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ProductOptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product option</description>
        <label>Product Option</label>
        <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PurchaseId__c</fullName>
        <description>The purchase identifier associated with the asset</description>
        <externalId>true</externalId>
        <inlineHelpText>The purchase identifier associated with the asset</inlineHelpText>
        <label>Purchase Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForActivationDate__c</fullName>
        <description>The date the order item is ready for activation. The order item is activated on this date.</description>
        <inlineHelpText>The date the order item is ready for activation. The order item is activated on this date.</inlineHelpText>
        <label>Ready For Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForBillingDate__c</fullName>
        <description>The date when the order item is ready for billing. The billing schedules are created on this date.</description>
        <inlineHelpText>The date when the order item is ready for billing. The billing schedules are created on this date.</inlineHelpText>
        <label>Ready For Billing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForFulfillmentDate__c</fullName>
        <description>The date the order item is ready for fulfillment. The order item is fulfilled on this date.</description>
        <inlineHelpText>The date the order item is ready for fulfillment. The order item is fulfilled on this date.</inlineHelpText>
        <label>Ready For Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForRevRecDate__c</fullName>
        <description>The date when the order item is ready for revenue recognition. The revenue schedules are created on this date.</description>
        <inlineHelpText>The date when the order is order item for revenue recognition. The revenue schedules are created on this date.</inlineHelpText>
        <label>Ready For Revenue Recognition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__RenewalAdjustmentAmount__c</fullName>
        <description>The renewal price adjustment amount.</description>
        <inlineHelpText>The renewal price adjustment amount.</inlineHelpText>
        <label>Renewal Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__RenewalAdjustmentType__c</fullName>
        <description>The renewal price adjustment type</description>
        <inlineHelpText>The renewal price adjustment type</inlineHelpText>
        <label>Renewal Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Uplift</fullName>
                </value>
                <value>
                    <fullName>Uplift Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SellingTerm__c</fullName>
        <description>The selling term associated with the product or service</description>
        <label>Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SellingUom__c</fullName>
        <description>The selling unit of measure for the product</description>
        <inlineHelpText>The selling unit of measure for the product</inlineHelpText>
        <label>Selling Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ServiceLocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated service location</description>
        <inlineHelpText>ID of the associated service location</inlineHelpText>
        <label>Service Location</label>
        <referenceTo>Apttus_Config2__ServiceLocation__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Ship To)</relationshipLabel>
        <relationshipName>AgreementLineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__StartDate__c</fullName>
        <description>The start date for products and services</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SubType__c</fullName>
        <description>The user defined sub type</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SummaryGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the summary group associated with the item</description>
        <label>Summary Group</label>
        <referenceTo>Apttus_CMConfig__AgreementSummaryGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the line item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the line item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is taxable</description>
        <inlineHelpText>Indicates whether the line item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Term__c</fullName>
        <description>The pricing term associated with the product or service</description>
        <label>Pricing Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TotalQuantity__c</fullName>
        <description>The total quantity is Quantity + Asset Quantity</description>
        <inlineHelpText>The total quantity is Quantity + Asset Quantity</inlineHelpText>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Type__c</fullName>
        <description>The user defined type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPR</fullName>
                    <default>true</default>
                    <label>PPR</label>
                </value>
                <value>
                    <fullName>BMC</fullName>
                </value>
                <value>
                    <fullName>BDF</fullName>
                </value>
                <value>
                    <fullName>EFF</fullName>
                </value>
                <value>
                    <fullName>TPR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Uom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2_SellingUom__c</fullName>
        <label>Selling Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__AmortizationStartDate__c</fullName>
        <description>The amortization start date</description>
        <label>Amortization Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__AmortizationTermMonths__c</fullName>
        <label>Amortization Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__AmortizationType__c</fullName>
        <description>The amortization type</description>
        <label>Amortization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
                <value>
                    <fullName>Straight Line With Quarterly Trueup</fullName>
                </value>
                <value>
                    <fullName>Straight Line With Advanced Quarterly Trueup</fullName>
                </value>
                <value>
                    <fullName>Straight Line With Annual Trueup</fullName>
                </value>
                <value>
                    <fullName>Fixed Balance With Quarterly Trueup</fullName>
                </value>
                <value>
                    <fullName>Fixed Balance With Monthly Accrual</fullName>
                </value>
                <value>
                    <fullName>Offsetting Loan With Quarterly Trueup</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Loan With Quarterly Trueup</fullName>
                </value>
                <value>
                    <fullName>Monthly Accrual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__Amortize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the loan or incentive will be amortized</description>
        <label>Amortize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__FixedAdditionalInterest__c</fullName>
        <description>Fixed amount to add to the calculated interest</description>
        <label>Fixed Additional Interest</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__ImmediatePayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Immediate payment indicator</description>
        <label>Immediate Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__InterestRate__c</fullName>
        <description>The interest rate</description>
        <label>Interest Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__MonthlyPayment__c</fullName>
        <description>Fixed monthly payment</description>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__OverUnderRebateTreatment__c</fullName>
        <description>The over/under rebate treatment</description>
        <label>Over/Under Rebate Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apply to Principal</fullName>
                    <default>true</default>
                    <label>Apply to Principal</label>
                </value>
                <value>
                    <fullName>Make Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__TermMonths__c</fullName>
        <description>The term in months</description>
        <label>Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__AllocationAmount__c</fullName>
        <description>Amount allocated for the Agreement Line Item. For ASC-605 this field will be null.</description>
        <inlineHelpText>Amount allocated for the Agreement Line Item.</inlineHelpText>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
</CustomObject>